# agentic-engineering

./: .dev.vars.example  .gitignore  AGENTS.md  CODEMAP.md  MIGRATION_PLAN.md  README.md  biome.json  cucumber.cjs  package.json  pnpm-lock.yaml  pylock.toml  pyproject.toml  tsconfig.features.json  tsconfig.json  wrangler.toml
.opencode/skills/: bdd-harness.md  d1-migration.md  htmx-fragment-swap.md  index.json  kv-fragment-cache.md  lessons.md  memory_manager.md  mobile-capacitor.md  no-mistakes.md  pr-creation.md  sso-auth.md  template_blueprint.md
.opencode/skills/workers-best-practices/: SKILL.md
docs/: ARCHITECTURE_DEEP_DIVE.md  ENGINEERING_FLOW.md  PRODUCT_PLAYBOOK.md  SECURITY_AND_AUTH_RUNBOOK.md  TESTING_AND_QUALITY_SPEC.md
features/: conftest.py  items_archive.feature  template_defects.feature  workflow.feature
features/steps/: api.steps.ts  test_items_archive.py  test_template_defects.py  test_workflow.py  ui.steps.ts
features/support/: auth.ts  hooks.ts  world.ts
migrations/: 0001_init.sql  0002_items_archived.sql
prompts/: architecture.md  engineering_flow.md  instructions.md  memory.md  principle.md  requirement.md
public/: daisyui.min.css  htmx.min.js
scripts/: bootstrap-worktree.sh  deploy.sh  ensure-wrangler.sh  test.sh
src/: app.py  entry.py  index.tsx  templates.py
src/db/: items.py
src/lib/: csrf.py  session.py  session.ts
src/routes/: health.ts  items.py  items.tsx
src/schemas/: items.py
src/templates/: item_list.html  item_row.html  layout.html
